--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
       with:
         host: ${{ secrets.REMOTE_HOST }}
         username: ${{ secrets.REMOTE_USER }}
-        key: ${{secrets.SERVER_SSH_KEY}}
-        #password: ${{ secrets.PASSWORD }}
+        # key: ${{secrets.SERVER_SSH_KEY}}
+        password: ${{ secrets.SERVER_PASSWORD }}
         port: 22
         script: echo 'success!' > ~/output.txt
