--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,23 +1,30 @@
-# This is a basic workflow to help you get started with Actions
+name: SSH Deploy
 
-name: Deploy
-
-# Controls when the action will run. 
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main ]
+    branches: [ master ]
+
 jobs:
-  build:
-    name: Build
+  deploy:
     runs-on: ubuntu-latest
+
     steps:
-    - name: executing remote ssh commands using password
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.REMOTE_HOST }}
-        username: ${{ secrets.REMOTE_USER }}
-        # key: ${{secrets.SERVER_SSH_KEY}}
-        password: ${{ secrets.SERVER_PASSWORD }}
-        port: 22
-        script: echo 'success!' > ~/output.txt
+      - name: ssh deploy
+  # You may pin to the exact commit or the version.
+  # uses: easingthemes/ssh-deploy@191986574c0735ffad7ae1a297a414d6e6f95375
+        uses: easingthemes/ssh-deploy@v2.1.5
+        with:
+         # Private Key
+          SSH_PRIVATE_KEY: ${{secrets.SERVER_SSH_KEY}}
+          # Remote host
+          REMOTE_HOST: ${{secrets.REMOTE_HOST}}
+          # Remote user
+          REMOTE_USER: ${{secrets.REMOTE_USER}}
+          # Remote port
+          REMOTE_PORT: 22
+          # Source directory
+          SOURCE: /
+          # Target directory
+          TARGET: ${{secrets.REMOTE_TARGET}}
+          # Arguments to pass to rsync
+          # ARGS: # optional, default is -rltgoDzvO
