--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,8 +10,8 @@ jobs:
 
     steps:
       - name: ssh deploy
-  # You may pin to the exact commit or the version.
-  # uses: easingthemes/ssh-deploy@191986574c0735ffad7ae1a297a414d6e6f95375
+      # You may pin to the exact commit or the version.
+      # uses: easingthemes/ssh-deploy@191986574c0735ffad7ae1a297a414d6e6f95375
         uses: easingthemes/ssh-deploy@v2.1.5
         with:
          # Private Key
@@ -28,3 +28,15 @@ jobs:
           TARGET: ${{secrets.REMOTE_TARGET}}
           # Arguments to pass to rsync
           # ARGS: # optional, default is -rltgoDzvO
+      - name: Restart bot to enact changes
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.REMOTE_HOST }}
+          username: ${{ secrets.REMOTE_USER }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
+          port: 22
+          script: |
+            # Connect to Screen session running the bot and send a KeyboardInterrupt
+            screen -S akrb -p 0 -X stuff "^C"
+            # Reconnect to Screen session and relaunch the bot, then send ^M, to execute the command
+            screen -S akrb -p 0 -X stuff "./AllKnowingRedditBot.py^M"
