--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,31 +1,20 @@
 name: SSH Deploy
-
 on:
   push:
     branches: [ main ]
-
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
     steps:
       - name: ssh deploy
-      # You may pin to the exact commit or the version.
-      # uses: easingthemes/ssh-deploy@191986574c0735ffad7ae1a297a414d6e6f95375
         uses: easingthemes/ssh-deploy@v2.1.5
         with:
-         # Private Key
           SSH_PRIVATE_KEY: ${{secrets.SERVER_SSH_KEY}}
-          # Remote host
           REMOTE_HOST: ${{secrets.REMOTE_HOST}}
-          # Remote user
           REMOTE_USER: ${{secrets.REMOTE_USER}}
-          # Remote port
           REMOTE_PORT: 22
-          # Target directory
-          TARGET: ${{secrets.REMOTE_TARGET}}
-          # Arguments to pass to rsync
-          ARGS: "-rltgoDzvO --delete" # optional, default is -rltgoDzvO
+          TARGET: ${{secrets.REMOTE_TARGET}}/
+          ARGS: "-rltgoDzvO" # optional, default is -rltgoDzvO
       - name: Restart bot to enact changes
         uses: appleboy/ssh-action@master
         with:
