--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,17 +6,16 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@main
       - name: ssh deploy
-        uses: easingthemes/ssh-deploy@v2.1.5
+      - uses: actions/checkout@main
+      - uses: easingthemes/ssh-deploy@v2.1.5
         with:
           SSH_PRIVATE_KEY: ${{secrets.SERVER_SSH_KEY}}
           REMOTE_HOST: ${{secrets.REMOTE_HOST}}
           REMOTE_USER: ${{secrets.REMOTE_USER}}
           REMOTE_PORT: 22
           SOURCE: "server/"
-          TARGET: ${{secrets.REMOTE_TARGET}}"/"
-          ARGS: "-rltgoDzvO" # optional, default is -rltgoDzvO
+          TARGET: ${{secrets.REMOTE_TARGET}}
       - name: Restart bot to enact changes
         uses: appleboy/ssh-action@master
         with:
