--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
           REMOTE_HOST: ${{secrets.REMOTE_HOST}}
           REMOTE_USER: ${{secrets.REMOTE_USER}}
           REMOTE_PORT: 22
-          SOURCE: "server/"
+          # SOURCE: "server/" Left commented b/c default is root directory
           TARGET: ${{secrets.REMOTE_TARGET}}
       - name: Restart bot to enact changes
         uses: appleboy/ssh-action@master
