--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
           REMOTE_HOST: ${{secrets.REMOTE_HOST}}
           REMOTE_USER: ${{secrets.REMOTE_USER}}
           REMOTE_PORT: 22
-          SOURCE: rltgoDzvO --exclude={'.github', '.git'}
+          ARGS: rltgoDzvO --exclude={'.github', '.git'}
           TARGET: ${{secrets.REMOTE_TARGET}}
       - name: Restart bot to enact changes
         uses: appleboy/ssh-action@master
